--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Proyecto Librería grupo3",
   "main": "./views/app.js",
   "scripts": {
-    "dev": "nodemon ./views/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "mongoose": "^5.11.11"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
 }
